fix code overlapping toc

--- a/_scss/_content.scss
+++ b/_scss/_content.scss
@@ -41,7 +41,6 @@ code {
     font-size: 90%;
     padding: 3px 7px;
     overflow-x: scroll;
-    white-space: nowrap;
 }
 
 .highlighter-rouge {
